Closed
Bug 225188
Opened 22 years ago
Closed 22 years ago
Crash on quit after posting a news article (nsMsgAccountManager::hashElementRelease)
Categories
(MailNews Core :: Networking: NNTP, defect)
Tracking
(Not tracked)
VERIFIED
FIXED
People
(Reporter: mscott, Assigned: mscott)
Details
(Keywords: crash)
Attachments
(1 file)
|
508 bytes,
patch
|
Details | Diff | Splinter Review |
Summary says it all.
Now visible in a build from 11/09
Full stack trace:
nsMsgAccountManager::hashElementRelease(nsHashKey * 0x03759a18, void *
0x03759720, void * 0x00000000) line 1185 + 9 bytes
hashEnumerateRemove(PLDHashTable * 0x0303f130, PLDHashEntryHdr * 0x0303f554,
unsigned int 3, void * 0x0012fbe8) line 315 + 26 bytes
PL_DHashTableEnumerate(PLDHashTable * 0x0303f130, int (PLDHashTable *,
PLDHashEntryHdr *, unsigned int, void *)* 0x1001bb90
hashEnumerateRemove(PLDHashTable *, PLDHashEntryHdr *, unsigned int, void *),
void * 0x0012fbe8) line 619 + 34 bytes
nsHashtable::Reset(int (nsHashKey *, void *, void *)* 0x01b24270
nsMsgAccountManager::hashElementRelease(nsHashKey *, void *, void *), void *
0x00000000) line 336 + 21 bytes
nsMsgAccountManager::UnloadAccounts(nsMsgAccountManager * const 0x0303f0d0) line
1575
nsMsgAccountManager::Shutdown() line 214
nsMsgAccountManager::Observe(nsMsgAccountManager * const 0x0303f0d4, nsISupports
* 0x02af3428, const char * 0x024ffda0, const unsigned short * 0x024ffd0c) line 294
nsObserverService::NotifyObservers(nsObserverService * const 0x00a200c8,
nsISupports * 0x02af3428, const char * 0x024ffda0, const unsigned short *
0x024ffd0c) line 210
n
while unloading the accounts, we are getting an account from the hash table that
has been deleted out from underneath us.
| Assignee | ||
Comment 1•22 years ago
|
||
I think this was caused by the fix for Bug #54911
| Assignee | ||
Comment 2•22 years ago
|
||
add a missing addref from the patch for bug #54911
| Assignee | ||
Comment 3•22 years ago
|
||
fixed
Status: ASSIGNED → RESOLVED
Closed: 22 years ago
Resolution: --- → FIXED
Comment 4•22 years ago
|
||
I knew there were a bug somewhere ! I posted a thread in mozillazine from this !
Thanks :)
| Assignee | ||
Comment 5•22 years ago
|
||
it was your post that made me notice the problem. Good catch.
Comment 6•22 years ago
|
||
Comment on attachment 135159 [details] [diff] [review]
the fix
NS_IF_ADDREF wasn't strictly necessary here, surely an NS_ADDREF would do?
Comment 7•22 years ago
|
||
Thanks for fixing it, Scott. That AddRef() issue is new to me.
Comment 8•21 years ago
|
||
Verified FIXED using trunk 2004-05-12-08 with news.verizon.net on Windows XP:
news://news.verizon.net:119/UrBoc.191771$L31.76770@nwrddc01.gnilink.net
Status: RESOLVED → VERIFIED
Updated•21 years ago
|
Product: MailNews → Core
Updated•17 years ago
|
Product: Core → MailNews Core
You need to log in
before you can comment on or make changes to this bug.
Description
•