Bug #225188 --> crash when quitting mail after posting a news article by adding a missing addref.

r/sr=bienvenu